Spacing with recommended header and fixed issue with movies being requested multiple times due to 'genres' being in the useEffect

--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -29,4 +29,10 @@
 	&__links a {
 		color: $color-black;
 	}
+
+	// Recommended header
+	&__recommended {
+		font-size: 4rem;
+		margin-bottom: 6rem;
+	}
 }
